--- a/numfacts/numfacts.test.unit/numfacts.test.unit.csproj
+++ b/numfacts/numfacts.test.unit/numfacts.test.unit.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Builders\ArgumentsModelBuilderTest.cs" />
     <Compile Include="Models\ArgumentsModelTest.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
