--- a/numfacts/numfacts/numfacts.csproj
+++ b/numfacts/numfacts/numfacts.csproj
@@ -73,6 +73,7 @@
   <ItemGroup>
     <Compile Include="Builders\ArgumentsModelBuilder.cs" />
     <Compile Include="Constants.cs" />
+    <Compile Include="Models\APIResponseModel.cs" />
     <Compile Include="Models\ArgumentsModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
