--- a/numfacts/numfacts/packages.config
+++ b/numfacts/numfacts/packages.config
@@ -5,4 +5,5 @@
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net461" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net461" />
+  <package id="RestSharp" version="106.10.1" targetFramework="net461" />
 </packages>
