Updated to include output constants.

--- a/numfacts/numfacts/numfacts.csproj
+++ b/numfacts/numfacts/numfacts.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Constants\ErrorConstants.cs" />
     <Compile Include="Constants\APIConstants.cs" />
     <Compile Include="Constants\FlagConstants.cs" />
+    <Compile Include="Constants\OutputConstants.cs" />
     <Compile Include="Models\APIResponseModel.cs" />
     <Compile Include="Models\ArgumentsModel.cs" />
     <Compile Include="Program.cs" />
